fixes squishy titles

--- a/app/components/typography.css
+++ b/app/components/typography.css
@@ -125,10 +125,6 @@ h1 {
   letter-spacing: 0.2em;
   color: var(--text-color-1);
 
-  &:matches(+ h2, + h3) {
-    margin-top: -1rem;
-  }
-
   @media (orientation: portrait) {
     --fluid-type-min-size: 1.5;
     --fluid-type-max-size: 4.5;
